--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="Chrome">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enemy Movement Patterns</title>
+    <link rel="stylesheet" href="index.css"/>
 </head>
 <body>
+    <canvas id = "canvas"></canvas> 
     <script src = "index.js"></script>
 </body>
-</html>
+</html> 
