getting more curves

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <canvas id = "canvas"></canvas> 
-    <script src = "index.js"></script>
+    <!-- <script src = "RandomHorizontalMovementWithSine.js"></script> -->
+    <script src = "Curves.js"></script>
 </body>
 </html> 
