--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <canvas id = "canvas"></canvas> 
+    <!-- <script src = "RandomMovement.js"></script> -->
     <!-- <script src = "RandomHorizontalMovementWithSine.js"></script> -->
-    <script src = "Curves.js"></script>
+    <!-- <script src = "Curves.js"></script> -->
+    <script src = "randomMovement2.js"></script>
 </body>
 </html> 
